# inspo-crawler

./: .gitignore  README.md
.github/workflows/: build.yml
packaging/: PKGBUILD  inspo-crawler.desktop
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  lib.rs  main.rs  model.rs
src-tauri/src/sources/: arena.rs  awwwards.rs  behance.rs  dribbble.rs  lexica.rs  mod.rs  pinterest.rs  unsplash.rs
