[package]
name = "inspo-crawler"
version = "0.1.0"
description = "Find UI / design inspiration across Pinterest, Dribbble, Behance, Unsplash and Are.na"
authors = ["russus"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "inspo_crawler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
futures = "0.3"
scraper = "0.20"
async-trait = "0.1"
anyhow = "1"
urlencoding = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
